package src.Tuiles;

public class MurDeGlace extends Obstacle {
}
