package src.Tuiles;

public class MurDePierre extends Obstacle {
}
